--- a/WebApplication/Views/HomeUser/HomeUsers.cshtml
+++ b/WebApplication/Views/HomeUser/HomeUsers.cshtml
@@ -193,6 +193,7 @@
 
                 </div>
                 @{ var prod = productTable.FirstOrDefault();
+                    if (prod != null) {
                     <div class="sales">
                         <div class="tag">New</div>
                         <div class="off">
@@ -210,7 +211,7 @@
                             <img src="@prod.ImagePath" alt="">
                         </div>
                     </div>
-                }
+                        } }
             </div>
         </div>
     </section>
