--- a/WebApplication/Views/Shared/ALayout.cshtml
+++ b/WebApplication/Views/Shared/ALayout.cshtml
@@ -45,12 +45,8 @@
                             </li>
                             <li class="menu-item">
 
-                                @Html.ActionLink("Home", "HomeAdmin2", "HomeAdmin" , new { @class = "menu-link" })
+                                @Html.ActionLink("Home", "HomeAdmin2", "HomeAdmin", new { @class = "menu-link" })
                             </li>
-
-
-
-
 
                             <li class="menu-item">
 
@@ -59,10 +55,9 @@
                         </ul>
                     </div>
                     <div class="search-block">
-                        <form action="shop-listing-1.html"
-                              class="input-group search-bar">
-                            <input type="text" placeholder="Search..."
-                                   required>
+
+                        <form action="~/HomeAdmin/ShopListing" class="input-group search-bar">
+                            <input type="text" name="query" placeholder="Search..." required>
                             <button class="search" type="submit">
                                 <i class="far fa-search search-icon"></i>
                             </button>
@@ -89,9 +84,9 @@
 
                             </li>
                         </ul>
-                            </li>
+                        </li>
                         </ul>
-                       
+
                     </div>
                 </div>
             </nav>
