--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -59,10 +59,9 @@
                         </ul>
                     </div>
                     <div class="search-block">
-                        <form action="shop-listing-1.html"
-                              class="input-group search-bar">
-                            <input type="text" placeholder="Search..."
-                                   required>
+
+                        <form action="~/HomeUser/ShopListing" class="input-group search-bar">
+                            <input type="text" name="query" placeholder="Search..." required>
                             <button class="search" type="submit">
                                 <i class="far fa-search search-icon"></i>
                             </button>
@@ -71,7 +70,7 @@
                     <div class="right-nav">
                         <ul class="navbar-nav m-0">
                             <li class="menu-item">
-                                @Html.ActionLink("AccountUser", "UserAccount", "Users", new { @class = "menu-link" })
+                                @Html.ActionLink("Accoun", "UserAccount", "Users", new { @class = "menu-link" })
                             </li>
                             <li class="menu-item">
                                 @Html.ActionLink("Logout", "LogOut", "Login", new { area = "" }, new { @class = "menu-link" })
