--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -59,10 +59,9 @@
                         </ul>
                     </div>
                     <div class="search-block">
-                        <form action="shop-listing-1.html"
-                              class="input-group search-bar">
-                            <input type="text" placeholder="Search..."
-                                   required>
+                        
+                        <form action="~/Home/ShopListing" class="input-group search-bar">
+                            <input type="text" name="query" placeholder="Search..." required>
                             <button class="search" type="submit">
                                 <i class="far fa-search search-icon"></i>
                             </button>
