--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -131,18 +131,9 @@
 
                             </li>
                             <li class="has-children">
-                                <a href="javascript:void(0);">Pages</a>
-                                <ul class="submenu">
-                                    <li>@Html.ActionLink("Blog", "Blog", "HomeUser", new { @class = "menu-link" })</li>
-                                    @*<li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeUser", new { @class = "menu-link" })</li>*@
-                                    <li>@Html.ActionLink("Product-detail", "ProductDetail", "HomeUser", new { @class = "menu-link" })</li>
-                                    @*<li>@Html.ActionLink("Cart", "Cart", "HomeUser", new { @class = "menu-link" })</li>*@
-                                    <li>@Html.ActionLink("Checkout", "Checkout", "HomeUser", new { @class = "menu-link" })</li>
-                                    @*<li>@Html.ActionLink("Wishlist", "Wishlist", "HomeUser", new { @class = "menu-link" })</li>*@
-                                    <li>
+                                @Html.ActionLink("Blog", "Blog", "HomeUser", new { @class = "menu-link" })
 
-                                        @Html.ActionLink("Contact", "Contact", "HomeUser", new { @class = "menu-link" })
-                                    </li>
+                            </li>
                                 </ul>
                             </li>
                         </ul>
